# sentiric-observer

./: .context.md  Cargo.toml  Dockerfile  LOGIC.md  README.md  TELEMETRY_STANDARD.md  build.rs
.github/workflows/: docker-publish.yml
docs/: 01_SENTIRIC_TELEMETRY_STANDARD_SUTS_v4.md  02_LANGUAGE_IMPLEMENTATION_GUIDE_v1.md  03_OBSERVER_ARCHITECTURE_BLUEPRINT_v4.md  04_PROJECT_EXECUTION_ROADMAP.md  05_PLATFORM_GOVERNANCE_AND_EVOLUTION_POLICY.md  FEATURES_MANUAL.md  ROADMAP.md
proto/: observer.proto
src/: config.rs  docker_harvester.rs  index.html  main.rs  model.rs  sniffer.rs
src/adapters/: docker.rs  exporter.rs  grpc_client.rs  mod.rs  sniffer.rs
src/api/: grpc.rs  mod.rs  routes.rs
src/core/: aggregator.rs  domain.rs  mod.rs
src/engine/: aggregator.rs  harvester.rs  mod.rs  sniffer.rs
src/ports/: mod.rs
src/ui/: index.html
src/ui/css/: layout.css  theme.css
src/ui/js/: app.js  config.js  store.js  visualizer.js  websocket.js
src/ui/js/components/: header.js  inspector.js  matrix.js  toolbar.js  trace_list.js
src/ui/js/features/: audio_engine.js  visualizer.js
src/utils/: parser.rs
