[package]
name = "sentiric-observer"
version = "2.0.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }
futures-util = "0.3"

# Web Server & gRPC Runtime
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tonic = "0.11"
prost = "0.12"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Docker Integration
bollard = "0.15"

# Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4" }
regex = "1.10"
lazy_static = "1.4"
anyhow = "1.0"

# Network Sniffing
pcap = "1.1"

[build-dependencies]
# build.rs dosyasının çalışması için bu bölüm şarttır
tonic-build = "0.11"