[package]
name = "sentiric-observer"
version = "4.4.5"
edition = "2021"
authors = ["Sentiric Architecture Team"]

[dependencies]
# --- Async Runtime & Web ---
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
async-trait = "0.1"  # <--- BU EKSİKTİ, EKLENDİ

# --- EKLENENLER (MISSING DEPS) ---
futures-util = "0.3"  # StreamExt ve next() için şart
bytes = "1.5"         # bollard log çıktısı için şart
# ---------------------------------

# --- Serialization & Validation (SUTS v4.0) ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] } # Şema kontrolü için kritik

# --- Observability & Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# --- Ingestion Adapters ---
bollard = "0.15" # Docker API
tonic = "0.11"   # gRPC
prost = "0.12"
pcap = "1.1"     # Sniffer (Dikkat: libpcap-dev gerektirir)

# --- Utils ---
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
hostname = "0.3"
lazy_static = "1.4"
regex = "1.10"
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.11"

# --- Production Optimization ---
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true