[package]
name = "sentiric-observer"
version = "6.0.0" 
edition = "2021"
authors = ["Sentiric Architecture Team"]

[dependencies]
# --- Async Runtime & Web ---
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
async-trait = "0.1"
futures-util = "0.3"
bytes = "1.5"

# --- Serialization & Validation ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }

# --- Observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# --- Ingestion Adapters ---
bollard = "0.15" # Docker API
tonic = "0.11"   # gRPC
prost = "0.12"
pcap = "1.1"

# --- Algorithms & Utils ---
lru = "0.12"     # [YENİ] O(1) Cache performansı için
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
hostname = "0.3"
lazy_static = "1.4"
regex = "1.10"
dotenv = "0.15"
base64 = "0.21"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = "fat"      # [OPTIMIZATION] Thin yerine Fat LTO daha iyi optimize eder
codegen-units = 1
panic = "abort"
strip = true